# bgc-aws-logging

./: .buildinfo  genindex.html  health_check_lambda.html  index.html  modules.html  monitoring.health_check_lambda.html  monitoring.html  monitoring.s3_partitioning_lambda.html  objects.inv  py-modindex.html  pyproject.toml  s3_partitioning_lambda.html  search.html  searchindex.js
.doctrees/: environment.pickle  health_check_lambda.doctree  index.doctree  modules.doctree  monitoring.doctree  monitoring.health_check_lambda.doctree  monitoring.s3_partitioning_lambda.doctree  s3_partitioning_lambda.doctree
.github/workflows/: docs.yaml
_sources/: index.rst.txt  monitoring.health_check_lambda.rst.txt  monitoring.rst.txt  monitoring.s3_partitioning_lambda.rst.txt
docs/: conf.py  health_check_lambda.rst  modules.rst  s3_partitioning_lambda.rst
docs/_build/doctrees/: environment.pickle  health_check_lambda.doctree  index.doctree  modules.doctree  s3_partitioning_lambda.doctree
docs/_build/html/: .buildinfo  genindex.html  health_check_lambda.html  index.html  modules.html  objects.inv  py-modindex.html  s3_partitioning_lambda.html  search.html  searchindex.js
src/: health_check_lambda.py
src/bgc-aws-logging.egg-info/: SOURCES.txt
src/monitoring/: s3_partitioning_lambda.py
src/sphinxy.egg-info/: PKG-INFO  SOURCES.txt
