[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinxy"
description = "Examples for sphinx-tutorial"
version = "0.0.1"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  { name = "Mehma Bhasin", email = "mbhasin14@bloomberg.net" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
